shardc/frontend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list_opt
Rule 2     statement_list_opt -> statement_list
Rule 3     statement_list_opt -> <empty>
Rule 4     statement_list -> statement
Rule 5     statement_list -> statement statement_list
Rule 6     statement -> expression SEMI
Rule 7     expression -> NUMBER
Rule 8     expression -> PLUS expression
Rule 9     expression -> MINUS expression
Rule 10    expression -> expression PLUS expression
Rule 11    expression -> expression MINUS expression
Rule 12    expression -> expression STAR expression
Rule 13    expression -> expression SLASH expression
Rule 14    expression -> LPAR expression RPAR

Terminals, with rules where they appear

LPAR                 : 14
MINUS                : 9 11
NUMBER               : 7
PLUS                 : 8 10
RPAR                 : 14
SEMI                 : 6
SLASH                : 13
STAR                 : 12
error                : 

Nonterminals, with rules where they appear

expression           : 6 8 9 10 10 11 11 12 12 13 13 14
program              : 0
statement            : 4 5
statement_list       : 2 5
statement_list_opt   : 1

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list_opt
    (2) statement_list_opt -> . statement_list
    (3) statement_list_opt -> .
    (4) statement_list -> . statement
    (5) statement_list -> . statement statement_list
    (6) statement -> . expression SEMI
    (7) expression -> . NUMBER
    (8) expression -> . PLUS expression
    (9) expression -> . MINUS expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression STAR expression
    (13) expression -> . expression SLASH expression
    (14) expression -> . LPAR expression RPAR

    $end            reduce using rule 3 (statement_list_opt -> .)
    NUMBER          shift and go to state 6
    PLUS            shift and go to state 7
    MINUS           shift and go to state 8
    LPAR            shift and go to state 9

    program                        shift and go to state 1
    statement_list_opt             shift and go to state 2
    statement_list                 shift and go to state 3
    statement                      shift and go to state 4
    expression                     shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list_opt .

    $end            reduce using rule 1 (program -> statement_list_opt .)


state 3

    (2) statement_list_opt -> statement_list .

    $end            reduce using rule 2 (statement_list_opt -> statement_list .)


state 4

    (4) statement_list -> statement .
    (5) statement_list -> statement . statement_list
    (4) statement_list -> . statement
    (5) statement_list -> . statement statement_list
    (6) statement -> . expression SEMI
    (7) expression -> . NUMBER
    (8) expression -> . PLUS expression
    (9) expression -> . MINUS expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression STAR expression
    (13) expression -> . expression SLASH expression
    (14) expression -> . LPAR expression RPAR

    $end            reduce using rule 4 (statement_list -> statement .)
    NUMBER          shift and go to state 6
    PLUS            shift and go to state 7
    MINUS           shift and go to state 8
    LPAR            shift and go to state 9

    statement                      shift and go to state 4
    statement_list                 shift and go to state 10
    expression                     shift and go to state 5

state 5

    (6) statement -> expression . SEMI
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . STAR expression
    (13) expression -> expression . SLASH expression

    SEMI            shift and go to state 11
    PLUS            shift and go to state 12
    MINUS           shift and go to state 13
    STAR            shift and go to state 14
    SLASH           shift and go to state 15


state 6

    (7) expression -> NUMBER .

    SEMI            reduce using rule 7 (expression -> NUMBER .)
    PLUS            reduce using rule 7 (expression -> NUMBER .)
    MINUS           reduce using rule 7 (expression -> NUMBER .)
    STAR            reduce using rule 7 (expression -> NUMBER .)
    SLASH           reduce using rule 7 (expression -> NUMBER .)
    RPAR            reduce using rule 7 (expression -> NUMBER .)


state 7

    (8) expression -> PLUS . expression
    (7) expression -> . NUMBER
    (8) expression -> . PLUS expression
    (9) expression -> . MINUS expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression STAR expression
    (13) expression -> . expression SLASH expression
    (14) expression -> . LPAR expression RPAR

    NUMBER          shift and go to state 6
    PLUS            shift and go to state 7
    MINUS           shift and go to state 8
    LPAR            shift and go to state 9

    expression                     shift and go to state 16

state 8

    (9) expression -> MINUS . expression
    (7) expression -> . NUMBER
    (8) expression -> . PLUS expression
    (9) expression -> . MINUS expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression STAR expression
    (13) expression -> . expression SLASH expression
    (14) expression -> . LPAR expression RPAR

    NUMBER          shift and go to state 6
    PLUS            shift and go to state 7
    MINUS           shift and go to state 8
    LPAR            shift and go to state 9

    expression                     shift and go to state 17

state 9

    (14) expression -> LPAR . expression RPAR
    (7) expression -> . NUMBER
    (8) expression -> . PLUS expression
    (9) expression -> . MINUS expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression STAR expression
    (13) expression -> . expression SLASH expression
    (14) expression -> . LPAR expression RPAR

    NUMBER          shift and go to state 6
    PLUS            shift and go to state 7
    MINUS           shift and go to state 8
    LPAR            shift and go to state 9

    expression                     shift and go to state 18

state 10

    (5) statement_list -> statement statement_list .

    $end            reduce using rule 5 (statement_list -> statement statement_list .)


state 11

    (6) statement -> expression SEMI .

    NUMBER          reduce using rule 6 (statement -> expression SEMI .)
    PLUS            reduce using rule 6 (statement -> expression SEMI .)
    MINUS           reduce using rule 6 (statement -> expression SEMI .)
    LPAR            reduce using rule 6 (statement -> expression SEMI .)
    $end            reduce using rule 6 (statement -> expression SEMI .)


state 12

    (10) expression -> expression PLUS . expression
    (7) expression -> . NUMBER
    (8) expression -> . PLUS expression
    (9) expression -> . MINUS expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression STAR expression
    (13) expression -> . expression SLASH expression
    (14) expression -> . LPAR expression RPAR

    NUMBER          shift and go to state 6
    PLUS            shift and go to state 7
    MINUS           shift and go to state 8
    LPAR            shift and go to state 9

    expression                     shift and go to state 19

state 13

    (11) expression -> expression MINUS . expression
    (7) expression -> . NUMBER
    (8) expression -> . PLUS expression
    (9) expression -> . MINUS expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression STAR expression
    (13) expression -> . expression SLASH expression
    (14) expression -> . LPAR expression RPAR

    NUMBER          shift and go to state 6
    PLUS            shift and go to state 7
    MINUS           shift and go to state 8
    LPAR            shift and go to state 9

    expression                     shift and go to state 20

state 14

    (12) expression -> expression STAR . expression
    (7) expression -> . NUMBER
    (8) expression -> . PLUS expression
    (9) expression -> . MINUS expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression STAR expression
    (13) expression -> . expression SLASH expression
    (14) expression -> . LPAR expression RPAR

    NUMBER          shift and go to state 6
    PLUS            shift and go to state 7
    MINUS           shift and go to state 8
    LPAR            shift and go to state 9

    expression                     shift and go to state 21

state 15

    (13) expression -> expression SLASH . expression
    (7) expression -> . NUMBER
    (8) expression -> . PLUS expression
    (9) expression -> . MINUS expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression STAR expression
    (13) expression -> . expression SLASH expression
    (14) expression -> . LPAR expression RPAR

    NUMBER          shift and go to state 6
    PLUS            shift and go to state 7
    MINUS           shift and go to state 8
    LPAR            shift and go to state 9

    expression                     shift and go to state 22

state 16

    (8) expression -> PLUS expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . STAR expression
    (13) expression -> expression . SLASH expression

    SEMI            reduce using rule 8 (expression -> PLUS expression .)
    PLUS            reduce using rule 8 (expression -> PLUS expression .)
    MINUS           reduce using rule 8 (expression -> PLUS expression .)
    STAR            reduce using rule 8 (expression -> PLUS expression .)
    SLASH           reduce using rule 8 (expression -> PLUS expression .)
    RPAR            reduce using rule 8 (expression -> PLUS expression .)

  ! PLUS            [ shift and go to state 12 ]
  ! MINUS           [ shift and go to state 13 ]
  ! STAR            [ shift and go to state 14 ]
  ! SLASH           [ shift and go to state 15 ]


state 17

    (9) expression -> MINUS expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . STAR expression
    (13) expression -> expression . SLASH expression

    SEMI            reduce using rule 9 (expression -> MINUS expression .)
    PLUS            reduce using rule 9 (expression -> MINUS expression .)
    MINUS           reduce using rule 9 (expression -> MINUS expression .)
    STAR            reduce using rule 9 (expression -> MINUS expression .)
    SLASH           reduce using rule 9 (expression -> MINUS expression .)
    RPAR            reduce using rule 9 (expression -> MINUS expression .)

  ! PLUS            [ shift and go to state 12 ]
  ! MINUS           [ shift and go to state 13 ]
  ! STAR            [ shift and go to state 14 ]
  ! SLASH           [ shift and go to state 15 ]


state 18

    (14) expression -> LPAR expression . RPAR
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . STAR expression
    (13) expression -> expression . SLASH expression

    RPAR            shift and go to state 23
    PLUS            shift and go to state 12
    MINUS           shift and go to state 13
    STAR            shift and go to state 14
    SLASH           shift and go to state 15


state 19

    (10) expression -> expression PLUS expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . STAR expression
    (13) expression -> expression . SLASH expression

    SEMI            reduce using rule 10 (expression -> expression PLUS expression .)
    PLUS            reduce using rule 10 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 10 (expression -> expression PLUS expression .)
    RPAR            reduce using rule 10 (expression -> expression PLUS expression .)
    STAR            shift and go to state 14
    SLASH           shift and go to state 15

  ! STAR            [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! SLASH           [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 12 ]
  ! MINUS           [ shift and go to state 13 ]


state 20

    (11) expression -> expression MINUS expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . STAR expression
    (13) expression -> expression . SLASH expression

    SEMI            reduce using rule 11 (expression -> expression MINUS expression .)
    PLUS            reduce using rule 11 (expression -> expression MINUS expression .)
    MINUS           reduce using rule 11 (expression -> expression MINUS expression .)
    RPAR            reduce using rule 11 (expression -> expression MINUS expression .)
    STAR            shift and go to state 14
    SLASH           shift and go to state 15

  ! STAR            [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! SLASH           [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! PLUS            [ shift and go to state 12 ]
  ! MINUS           [ shift and go to state 13 ]


state 21

    (12) expression -> expression STAR expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . STAR expression
    (13) expression -> expression . SLASH expression

    SEMI            reduce using rule 12 (expression -> expression STAR expression .)
    PLUS            reduce using rule 12 (expression -> expression STAR expression .)
    MINUS           reduce using rule 12 (expression -> expression STAR expression .)
    STAR            reduce using rule 12 (expression -> expression STAR expression .)
    SLASH           reduce using rule 12 (expression -> expression STAR expression .)
    RPAR            reduce using rule 12 (expression -> expression STAR expression .)

  ! PLUS            [ shift and go to state 12 ]
  ! MINUS           [ shift and go to state 13 ]
  ! STAR            [ shift and go to state 14 ]
  ! SLASH           [ shift and go to state 15 ]


state 22

    (13) expression -> expression SLASH expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . STAR expression
    (13) expression -> expression . SLASH expression

    SEMI            reduce using rule 13 (expression -> expression SLASH expression .)
    PLUS            reduce using rule 13 (expression -> expression SLASH expression .)
    MINUS           reduce using rule 13 (expression -> expression SLASH expression .)
    STAR            reduce using rule 13 (expression -> expression SLASH expression .)
    SLASH           reduce using rule 13 (expression -> expression SLASH expression .)
    RPAR            reduce using rule 13 (expression -> expression SLASH expression .)

  ! PLUS            [ shift and go to state 12 ]
  ! MINUS           [ shift and go to state 13 ]
  ! STAR            [ shift and go to state 14 ]
  ! SLASH           [ shift and go to state 15 ]


state 23

    (14) expression -> LPAR expression RPAR .

    SEMI            reduce using rule 14 (expression -> LPAR expression RPAR .)
    PLUS            reduce using rule 14 (expression -> LPAR expression RPAR .)
    MINUS           reduce using rule 14 (expression -> LPAR expression RPAR .)
    STAR            reduce using rule 14 (expression -> LPAR expression RPAR .)
    SLASH           reduce using rule 14 (expression -> LPAR expression RPAR .)
    RPAR            reduce using rule 14 (expression -> LPAR expression RPAR .)

